@startuml

title __Publisher's Class Diagram__\n

  namespace com.bowling.alley {
    namespace publisher {
      class com.bowling.alley.publisher.ControlDesk {
          - lanes : HashSet<Lane>
          - numLanes : int
          - partyQueue : Queue<Party>
          - subscribers : Vector<ControlDeskObserver>
          + ControlDesk()
          + addPartyQueue()
          + assignLane()
          + getLanes()
          + getNumLanes()
          + getPartyQueue()
          + publish()
          + run()
          + subscribe()
          + viewScores()
          - registerPatron()
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace publisher {
      class com.bowling.alley.publisher.Lane {
          - ball : int
          - bowlIndex : int
          - bowlerIterator : Iterator<Bowler>
          - canThrowAgain : boolean
          - cumulScores : int[][]
          - curScores : int[]
          - finalScores : int[][]
          - frameNumber : int
          - gameFinished : boolean
          - gameIsHalted : boolean
          - gameNumber : int
          - partyAssigned : boolean
          - scores : HashMap<Bowler, int[]>
          - subscribers : Vector<LaneObserver>
          - tenthFrameStrike : boolean
          + Lane()
          + assignParty()
          + getBall()
          + getBowlIndex()
          + getCumulScores()
          + getPinsetter()
          + getScores()
          + isGameFinished()
          + isPartyAssigned()
          + pauseGame()
          + publish()
          + receivePinsetterEvent()
          + run()
          + subscribe()
          + unPauseGame()
          + unsubscribe()
          - checkIfHalted()
          - endGame()
          - getScore()
          - lanePublish()
          - markScore()
          - playGame()
          - resetBowlerIterator()
          - resetScores()
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace publisher {
      class com.bowling.alley.publisher.Pinsetter {
          - foul : boolean
          - pins : boolean[]
          - rnd : Random
          - subscribers : Vector<PinsetterObserver>
          - throwNumber : int
          + Pinsetter()
          + ballThrown()
          + reset()
          + resetPins()
          + subscribe()
          - sendEvent()
      }
    }
  }
  

  com.bowling.alley.publisher.Lane .up.|> com.bowling.alley.observer.PinsetterObserver
  com.bowling.alley.publisher.Lane o-- com.bowling.alley.util.CalculateScore : calculateScore
  com.bowling.alley.publisher.Lane o-- com.bowling.alley.model.Bowler : currentThrower
  com.bowling.alley.publisher.Lane o-- com.bowling.alley.model.Party : party
  com.bowling.alley.publisher.Lane o-- com.bowling.alley.publisher.Pinsetter : setter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
